--- a/TreeTracker/Resources/Localizable.strings
+++ b/TreeTracker/Resources/Localizable.strings
@@ -43,6 +43,7 @@
 "Home.InfoLabel.TreesUploadedLabel.Text" = "Trees Uploaded";
 "Home.UploadButton.Title" = "UPLOAD";
 "Home.AddTreeButton.Title" = "ADD TREE";
+"Home.ViewTreesButton.Title" = "VIEW TREES";
 
 //Add Tree Screen
 "AddTree.Title" = "Add Tree";
