--- a/TreeTracker/Resources/Localizable.strings
+++ b/TreeTracker/Resources/Localizable.strings
@@ -60,3 +60,6 @@
 "GPSAccuracyLabel.Text.Good" = "Good";
 "GPSAccuracyLabel.Text.Bad" = "Bad";
 "GPSAccuracyLabel.Text.Unknown" = "Unknown";
+
+//View Trees Screen
+"ViewTrees.Title" = "View Trees";
