--- a/TreeTracker/Resources/Localizable.strings
+++ b/TreeTracker/Resources/Localizable.strings
@@ -62,4 +62,4 @@
 "GPSAccuracyLabel.Text.Unknown" = "Unknown";
 
 //View Trees Screen
-"ViewTrees.Title" = "View Trees";
+"ViewTrees.Title" = "My Trees";
