Added take photo preview to AddTree Screen

--- a/TreeTracker/Resources/Localizable.strings
+++ b/TreeTracker/Resources/Localizable.strings
@@ -54,6 +54,7 @@
 "AddTree.PhotoButton.Title.Retake" = "Retake";
 "AddTree.SaveButton.Title" = "Save";
 "AddTree.PhotoLibraryButton.Title" = "Choose Photo";
+"AddTree.PhotoButton.Title.Retry" = "Retry";
 
 //GPS Accuracy
 "GPSAccuracyLabel.Text.Base" = "GPS Accuracy: ";
