Added NotesViewController, NotesViewModel, and Notes Storyboard Added add note button to add tree screen Added note saving ability to TreeService

--- a/TreeTracker/Resources/Localizable.strings
+++ b/TreeTracker/Resources/Localizable.strings
@@ -56,6 +56,10 @@
 "AddTree.PhotoLibraryButton.Title" = "Choose Photo";
 "AddTree.PhotoButton.Title.Retry" = "Retry";
 
+//Notes Screen
+"Notes.Title" = "Notes";
+"Notes.Placeholder" = "Add tree notes here.";
+
 //GPS Accuracy
 "GPSAccuracyLabel.Text.Base" = "GPS Accuracy: ";
 "GPSAccuracyLabel.Text.Good" = "Good";
