new logic to messages screen. MessageViewModel fetch data directly from coreData

--- a/TreeTracker/Resources/Localizable.strings
+++ b/TreeTracker/Resources/Localizable.strings
@@ -102,5 +102,6 @@
 "Settings.PhotoQuality.Option.High.Info" = "High resolution, high data usage.";
 
 //Messages Screen
+"Messages.Title" = "Admin";
 "Messages.InputTextView.PlaceHolder" = "Click to write a message";
 
