add announce view

--- a/TreeTracker/Resources/Localizable.strings
+++ b/TreeTracker/Resources/Localizable.strings
@@ -108,3 +108,5 @@
 "Messages.Title" = "Admin";
 "Messages.InputTextView.PlaceHolder" = "Click to write a message";
 
+//Announce Screen
+"Announce.Title" = "Announce";
