--- a/TreeTracker/Resources/Localizable.strings
+++ b/TreeTracker/Resources/Localizable.strings
@@ -102,14 +102,14 @@
 "Settings.PhotoQuality.Option.High.Info" = "High resolution, high data usage.";
 
 //ChatList Screen
-"ChatList.NoMessagesLabel.Text" = "No messages, Yet.";
+"ChatList.NoMessagesLabel.Text" = "No messages";
 
 //Messages Screen
 "Messages.Title" = "Admin";
 "Messages.InputTextView.PlaceHolder" = "Click to write a message";
 
 //Announce Screen
-"Announce.Title" = "Announce";
+"Announce.Title" = "Announcement";
 
 //Survey Screen
 "Survey.Title.Question" = "Question";
